--- a/admin-dashboard/edit-user.html
+++ b/admin-dashboard/edit-user.html
@@ -755,7 +755,7 @@
                 password: document.querySelector('input[name="password"]').value,
                 role: document.querySelector('.select-role').value,
             };
-            await axios.put('http://localhost:3000/api/edit-user', formData, {
+            await axios.put('https://health-care-facilities-backend.vercel.app/api/edit-user', formData, {
                 headers: {
                     'id': id
                 }
@@ -769,7 +769,7 @@
 
         document.addEventListener("DOMContentLoaded", async function () {
             const id = localStorage.getItem('userId');
-            await axios.get('http://localhost:3000/api/get-user', {
+            await axios.get('https://health-care-facilities-backend.vercel.app/api/get-user', {
                 headers: {
                     'id': id
                 }
