--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="assets/icons/logo.svg" type="image/x-icon" />
     <link rel="stylesheet" href="css/swiper.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="admin-dashboard/css/main.css">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
     <link rel="stylesheet" href="css/responsive-1.css" />
@@ -49,9 +50,38 @@
             </ul>
 
             <!-- Login Button -->
-            <div class="d-flex ms-lg-auto">
+            <div class="d-flex ms-lg-auto" id="login-btn">
                 <a href="login.html" class="btn primary-btn">Login</a>
             </div>
+
+            <div class="d-flex ms-lg-auto d-none" id="profile-btn">
+                <div class="dropdown d-none d-lg-block">
+                    <div class="dropdown-toggle d-flex align-items-center gap-2 show" data-bs-toggle="dropdown" style="cursor: pointer;"
+                        aria-expanded="true">
+                        <img src="assets/1.png" alt="" class="user-avatar">
+                        <span class="d-none d-lg-inline">Bohdan Peter</span>
+                    </div>
+                    <ul class="dropdown-menu shadow"
+                        style="width: 313px; padding: 16px; border-radius: 0px; border: none; position: absolute; inset: 0px 0px auto auto; margin: 0px; transform: translate(0px, 42.2222px);"
+                        data-popper-placement="bottom-end">
+                        <li class="dropdown-header p-0 mb-3">
+                            <div class="d-flex gap-3 align-items-center">
+                                <img src="assets/1.png" width="30" class="img-fluid" alt="" style="width: 87px; height: 87px; border-radius: 50%;">
+                                <div>
+                                    <h6 class="mb-0">Bohdan Peter</h6>
+                                    <small class="text-muted">Preston, UK</small>
+                                </div>
+                            </div>
+                        </li>
+                        <div class="border-top mt-2 pt-2">
+                            <button class="dropdown-item py-2 text-primary fw-semibold" id="logout-btn">
+                                Logout
+                            </button>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+
         </div>
     </div>
 </nav>
@@ -586,6 +616,25 @@
 
 
     <script>
+
+
+        const isLoginIn = localStorage.getItem('login');
+        const loginBtn = document.getElementById('login-btn');
+        const loginOut = document.getElementById('logout-btn');
+        const profileBtn = document.getElementById('profile-btn');
+
+        if (isLoginIn === 'true') {
+            loginBtn.classList.add('d-none');
+            profileBtn.classList.remove('d-none');
+        }else{
+            loginBtn.classList.remove('d-none');
+            profileBtn.classList.add('d-none');
+        }
+
+        loginOut.addEventListener(('click') , () => {
+            localStorage.removeItem('login')
+            location.reload()
+        })
 
         document.getElementById('submit-another').addEventListener(('click'), () => {
             const allfrom = document.querySelectorAll('form');
