--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Health Monitor</title>
+    <title>HealthCare Providers</title>
     <link rel="shortcut icon" href="assets/icons/logo.svg" type="image/x-icon" />
     <link rel="stylesheet" href="css/swiper.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -21,78 +21,83 @@
     <!-- loading End -->
 
     <!-- Navbar Start -->
-<nav class="navbar navbar-expand-lg bg-light">
-    <div class="container">
-        <!-- Logo -->
-        <a class="navbar-brand" href="/">
-            <img src="assets/images/logo.png" width="145" class="img-fluid" alt="logo">
-        </a>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container">
+            <!-- Logo -->
+            <a class="navbar-brand" href="/">
+                <img src="assets/images/logo.png" width="145" class="img-fluid" alt="logo">
+            </a>
 
-        <!-- Mobile Toggle Button -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <!-- Mobile Toggle Button -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <!-- Navbar Links -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul
-                class="navbar-nav align-items-lg-center justify-content-lg-center flex-lg-grow-1 mb-2 mb-lg-0 mt-lg-0 mt-4">
-                <li class="nav-item">
-                    <a class="nav-link mx-2 text-primary" href="#">Emergency</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mx-2 text-primary" href="#">Community</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mx-2 text-primary" href="#" id="registerBtn">Register</a>
-                </li>
-            </ul>
+            <!-- Navbar Links -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul
+                    class="navbar-nav align-items-lg-center justify-content-lg-center flex-lg-grow-1 mb-2 mb-lg-0 mt-lg-0 mt-4">
+                    <li class="nav-item">
+                        <a class="nav-link mx-2 text-primary" href="#">Emergency</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-2 text-primary" href="#">Community</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-2 text-primary" href="#" id="registerBtn">Register</a>
+                    </li>
+                    <li class="nav-item  d-lg-none" id="logout-btn-container">
+                        <button class="dropdown-item py-2 text-primary fw-semibold logout-btn nav-link mx-2 text-primary" id="logout-btn2">
+                            Logout
+                        </button>
+                    </li>
+                </ul>
 
-            <!-- Login Button -->
-            <div class="d-flex ms-lg-auto" id="login-btn">
-                <a href="login.html" class="btn primary-btn">Login</a>
-            </div>
-
-            <div class="d-flex ms-lg-auto d-none" id="profile-btn">
-                <div class="dropdown d-none d-lg-block">
-                    <div class="dropdown-toggle d-flex align-items-center gap-2 show" data-bs-toggle="dropdown" style="cursor: pointer;"
-                        aria-expanded="true">
-                        <img src="assets/1.png" alt="" class="user-avatar">
-                        <span class="d-none d-lg-inline">Bohdan Peter</span>
-                    </div>
-                    <ul class="dropdown-menu shadow"
-                        style="width: 313px; padding: 16px; border-radius: 0px; border: none; position: absolute; inset: 0px 0px auto auto; margin: 0px; transform: translate(0px, 42.2222px);"
-                        data-popper-placement="bottom-end">
-                        <li class="dropdown-header p-0 mb-3">
-                            <div class="d-flex gap-3 align-items-center">
-                                <img src="assets/1.png" width="30" class="img-fluid" alt="" style="width: 87px; height: 87px; border-radius: 50%;">
-                                <div>
-                                    <h6 class="mb-0">Bohdan Peter</h6>
-                                    <small class="text-muted">Preston, UK</small>
-                                </div>
-                            </div>
-                        </li>
-                        <div class="border-top mt-2 pt-2">
-                            <button class="dropdown-item py-2 text-primary fw-semibold" id="logout-btn">
-                                Logout
-                            </button>
-                        </div>
-                    </ul>
+                <!-- Login Button -->
+                <div class="d-flex ms-lg-auto" id="login-btn">
+                    <a href="login.html" class="btn primary-btn">Login</a>
                 </div>
-            </div>
 
+                <div class="d-flex ms-lg-auto d-none" id="profile-btn">
+                    <div class="dropdown d-none d-lg-block">
+                        <div class="dropdown-toggle d-flex align-items-center gap-2 show" data-bs-toggle="dropdown"
+                            style="cursor: pointer;" aria-expanded="true">
+                            <img src="assets/1.png" alt="" class="user-avatar">
+                            <span class=" d-inline user-name"></span>
+                        </div>
+                        <ul class="dropdown-menu shadow"
+                            style="width: 313px; padding: 16px; border-radius: 0px; border: none; position: absolute; inset: 0px 0px auto auto; margin: 0px; transform: translate(0px, 42.2222px);"
+                            data-popper-placement="bottom-end">
+                            <li class="dropdown-header p-0 mb-3">
+                                <div class="d-flex gap-3 align-items-center">
+                                    <img src="assets/1.png" width="30" class="img-fluid" alt=""
+                                        style="width: 87px; height: 87px; border-radius: 50%;">
+                                    <div>
+                                        <h6 class="mb-0 user-name"></h6>
+                                        <small class="text-muted" id="user-role"></small>
+                                    </div>
+                                </div>
+                            </li>
+                            <div class="border-top mt-2 pt-2">
+                                <button class="dropdown-item py-2 text-primary fw-semibold" id="logout-btn">
+                                    Logout
+                                </button>
+                            </div>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
     <!-- Navbar End -->
     <div class="container-fluid py-4">
         <div class="row mb-4">
-            <div class="col-12 text-center">
+            <div class="col-12 text-center heading-text">
                 <h2 class="page-head">HealthCare <span>Providers</span></h2>
-                <p>
-                    Register your healthcare facility using either bulk upload or step-by-step form</p>
+                <p class="heading-paraf">Register your healthcare facility using either bulk upload or step-by-step form</p>
             </div>
         </div>
 
@@ -352,9 +357,9 @@
                                 </div>
 
                                 <div class="d-flex justify-content-between mb-4">
-                                    <span class="step-indicator active" id="step1Indicator">Organization Details</span>
-                                    <span class="step-indicator" id="step2Indicator">Location</span>
-                                    <span class="step-indicator" id="step3Indicator">Complete Registration</span>
+                                    <span class="step-indicator  active" id="step1Indicator">Organization Details</span>
+                                    <span class="step-indicator " id="step2Indicator">Location</span>
+                                    <span class="step-indicator " id="step3Indicator">Complete Registration</span>
                                 </div>
 
                                 <!-- Step 1: Organization Details -->
@@ -491,7 +496,9 @@
                                     <div id="timeSchedule" style="display: none;" class="mt-4">
                                         <div class="d-flex justify-content-between align-items-center">
                                             <h6 class="mb-4">Operating Hours</h6>
-                                            <button id="setAllButton" class="btn btn-primary mb-3">Set All</button>
+                                            <button id="setAllButton"
+                                                class="mb-4 border-0 p-1 bg-transparent text-primary text-decoration-underline">Set
+                                                All</button>
                                         </div>
                                         <div class="time-slots">
                                             <!-- Will be populated by JavaScript -->
@@ -501,7 +508,7 @@
                                     <div class="d-flex justify-content-between mt-4">
                                         <button type="button" class="btn btn-secondary"
                                             onclick="prevStep(event)">Previous</button>
-                                        <button type="button" class="btn btn-primary submit-data-from" id=""
+                                        <button type="button" class="btn btn-primary submit-data-from" id="submit-btn"
                                             onclick="nextStep(event)">Submit</button>
                                     </div>
                                 </form>
@@ -618,21 +625,52 @@
     <script>
 
 
+        const id = localStorage.getItem('userId');
+
+        console.log(id);
+        axios.get('https://health-care-facilities-backend.vercel.app/api/get-user', {
+            headers: {
+                'id': id
+            }
+        }).then((res) => {
+            console.log(res.data.user);
+            const userName = document.querySelectorAll('.user-name');
+            const email = document.getElementById('user-role');
+
+            userName.forEach((name) => {
+                name.innerHTML = `${res.data.user.name} ${res.data.user.last_name}`;
+            })
+
+            email.innerHTML = res.data.user.role
+
+        }).catch((err) => {
+            console.log(err);
+        })
+
         const isLoginIn = localStorage.getItem('login');
         const loginBtn = document.getElementById('login-btn');
         const loginOut = document.getElementById('logout-btn');
+        const loginOut2 = document.getElementById('logout-btn2');
         const profileBtn = document.getElementById('profile-btn');
-
+        const logoutBtnContainer = document.getElementById('logout-btn-container');
         if (isLoginIn === 'true') {
             loginBtn.classList.add('d-none');
             profileBtn.classList.remove('d-none');
-        }else{
+            logoutBtnContainer.classList.remove('d-none');
+        } else {
             loginBtn.classList.remove('d-none');
             profileBtn.classList.add('d-none');
+            logoutBtnContainer.classList.add('d-none');
         }
 
-        loginOut.addEventListener(('click') , () => {
+        loginOut.addEventListener(('click'), () => {
             localStorage.removeItem('login')
+            localStorage.removeItem('userId')
+            location.reload()
+        })
+        loginOut2.addEventListener(('click'), () => {
+            localStorage.removeItem('login')
+            localStorage.removeItem('userId')
             location.reload()
         })
 
