--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
         }
 
         function updateFilePreview(file) {
-            const fileSize = (file.size / (1024 * 1024)).toFixed(2); // Convert to MB
+            const fileSize = (file.size / (1024 * 1024)).toFixed(2); 
             dragArea.innerHTML = `
         <div class="text-center py-3">
             <div class="mb-2">
