--- a/admin-dashboard/manage-users.html
+++ b/admin-dashboard/manage-users.html
@@ -944,7 +944,6 @@
                                 'id': id
                             }
                         }).then((res) => {
-                            console.log(res.data);
                             document.querySelector('.facility-name').innerHTML = `${res.data.user.name} ${res.data.user.last_name}`;
                             document.querySelector('.facility-type').innerHTML = res.data.user.email;
 
@@ -1020,7 +1019,7 @@
             }
         }
 
-    // 🔍 Search Function
+    // Search Function
     document.getElementById("searchInput").addEventListener("input", function () {
         let query = this.value.toLowerCase();
         let filteredData = allData.filter(item =>
@@ -1031,7 +1030,7 @@
     });
 
 
-    // 🔄 Sorting Function
+    //  Sorting Function
     document.getElementById("sortNewest").addEventListener("click", function () {
         let sortedData = [...allData].sort((a, b) => new Date(b.createdAt) - new Date(a.createdAt));
         renderTable(sortedData);
@@ -1042,8 +1041,63 @@
         renderTable(sortedData);
     });
 
-    // 📌 Table Render Function
+    //  Table Render Function
     function renderTable(data) {
+
+        let viewFacilityId;
+        // Initialize view buttons
+        const viewButtons = document.querySelectorAll('.view-facility-btn');
+
+        viewButtons.forEach(button => {
+            button.addEventListener('click', async (e) => {
+                e.preventDefault();
+                e.stopPropagation();
+
+                const id = button.getAttribute('data-id');
+                localStorage.setItem('facilityId', id)
+
+                await axios.get('https://health-care-facilities-backend.vercel.app/api/get-user', {
+                    headers: {
+                        'id': id
+                    }
+                }).then((res) => {
+                    document.querySelector('.facility-name').innerHTML = `${res.data.user.name} ${res.data.user.last_name}`;
+                    document.querySelector('.facility-type').innerHTML = res.data.user.email;
+
+                    document.querySelector('.facility-phone').innerHTML = res.data.user.role;
+
+                    if (res.data.data.address) {
+                        document.querySelector('.facility-address').innerHTML = `${res.data.data.address} , ${res.data.data.city} , ${res.data.data.state} , ${res.data.data.country}`;
+                    } else {
+                        document.querySelector('.facility-address').innerHTML = `${res.data.data.city} , ${res.data.data.state} , ${res.data.data.country}`;
+                    }
+
+                    const directionsBtn = document.querySelector('.directions-btn');
+                    const open24Hours = res.data.data.is_24_hours;
+                    const facilityAE = res.data.data.facility_a_e;
+
+                    if (open24Hours === 'yes') {
+                        document.querySelector('.timing-box').innerHTML = `<p class="hours-24 mb-1">Open 24 Hours</p>`;
+                    }
+
+                    if (facilityAE === 'yes') {
+                        document.querySelector('.facility-box').innerHTML = `<p class="facility-ae mb-1">A&E Facility</p>`;
+                    }
+
+                    directionsBtn.addEventListener(('click'), () => {
+                        window.open(res.data.data.google_maps_link, "_blank");
+                    })
+
+                }).catch((err) => {
+                    console.log(err);
+                })
+                // Show modal
+                const modalInstance = new bootstrap.Modal(modal);
+                modalInstance.show();
+            });
+        });
+
+
         let tableBody = document.getElementById("table-body");
         tableBody.innerHTML = "";
 
